# car_accident_prediction

./: .gitignore  README.md  project_notebook.ipynb  pyproject.toml
