[project]
name = "car-accident-prediction"
version = "0.1.0"
description = "Project for predicting car accidents using machine learning techniques."
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "psycopg2>=2.9.10",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
]
