[project]
name = "car-accident-prediction"
version = "1.0.0"
description = "Project for predicting car accidents using machine learning techniques."
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "albumentations==1.4.12",
    "arviz==0.19.0",
    "beautifulsoup4==4.12.3",
    "catboost==1.2.5",
    "category-encoders==2.6.3",
    "dask[dataframe]==2024.7.1",
    "et-xmlfile==1.1.0",
    "feature-engine==1.8.0",
    "imbalanced-learn==0.12.3",
    "ipykernel==6.29.5",
    "ipython==8.26.0",
    "ipywidgets==8.1.3",
    "joblib==1.4.2",
    "jupyter==1.0.0",
    "jupyterlab==4.2.4",
    "keras-tuner==1.4.7",
    "lifelines==0.29.0",
    "lightgbm==4.5.0",
    "lime==0.2.0.1",
    "lxml==5.2.2",
    "matplotlib==3.9.2",
    "missingno==0.5.2",
    "nbclient==0.10.0",
    "nbconvert==7.16.4",
    "nest-asyncio==1.6.0",
    "nltk==3.8.1",
    "notebook==7.2.1",
    "numpy==1.26.4",
    "opencv-python==4.10.0.84",
    "openpyxl==3.1.5",
    "optuna==3.6.1",
    "pandas==2.2.2",
    "phik==0.12.4",
    "pillow==10.4.0",
    "plotly==5.23.0",
    "polars==1.2.1",
    "prophet==1.1.5",
    "psycopg2-binary==2.9.9",
    "pyarrow==17.0.0",
    "pymc==5.16.2",
    "pymysql==1.1.1",
    "scikit-learn==1.5.1",
    "scikit-survival==0.23.0",
    "scipy==1.14.0",
    "seaborn==0.13.2",
    "sentence-transformers==3.0.1",
    "shap==0.46.0",
    "spacy==3.7.5",
    "sqlalchemy==2.0.31",
    "statsmodels==0.14.2",
    "tensorboard==2.17.0",
    "tensorflow==2.17.0",
    "tf-keras>=2.17.0",
    "torch==2.2.0",
    "tqdm==4.66.4",
    "transformers==4.43.3",
    "tsfresh==0.20.2",
    "xgboost==2.1.0",
    "xlrd==2.0.1",
    "xlwt==1.3.0",
    "yellowbrick==1.5",
]
